Project3/testcases/moretest5.out

*** Error line 4.
	a = foo(b);
               ^
*** syntax error

