Project3/testcases/moretest5.glsl
int main() {
	int a;
	int b; b = 5;
	a = foo(b);
	return a;
}
int foo (int x) {
	return x;
}

